--- a/tex.html
+++ b/tex.html
@@ -1,10 +1,31 @@
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>Hard.target</title>
+    <!--Required meta tags-->
     <meta charset="utf-8">
-    <meta name="viewpoint" content="width=divice-width, initial-scale=">
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewpoint" content="width=divice-width, initial-scale=1">
+
+    <!--Bootsrap css-->
+    <link rel="sylesheet" href="http://cdn.jsdelivr.net/npm/bootsrap@4.5.3/dist/css/bootstrap.min.css">
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700;800&display=swap" rel="stylesheet">
+
+    <!--fontwasome-->
+        <link rel="stylesheet" href="https://use.fontwesome.com/release/v5.7.2/css/aa/css">
+        <link rel="stylesheet" href="css/styles.css">
+
+        <!--animation--css-->
+        <link rel="stylesheet" type="text/css" href="css/animate.min.css">
+        <link href="css/demo.css" rel="stylesheet" media="all">
+    <title>Hard.target</title>
     </head>
     <body>
 
@@ -15,9 +36,6 @@
                 <div class="logo">
                 <img src="images/logo.jpeg"></a>
                 </div>
-                <button type="button" class="nav-toggler">
-                    <span></span>
-                </button>
             <nav class="nav">
                 <ul>
                     <li><ahref="#" class="active">Home</a></li>
@@ -88,7 +106,28 @@ Latest In products and services in these Fields</p>
     </div>
     <!--slider section ends--> 
 
- <script src="js/script.js"></script>
+
+
+    <!--option 1: Jquery and bootstrap Bundles (include Popper)-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <!--jquery--cdn-->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="js/jquery.nav.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/jquery.nav.js"></script>
+
+
+    <script>
+    $(document).ready(function(){
+        $(window).scroll(function(){//--scroll--top---indicator---arrow=jquery----//
+            if($window) .scrollTop() > 600){//---position---600----px scroll-----//
+            $("#scrolUp") .fadeIn();
+            }
+            else{}
+        })
+    
 
     </body>
     </html>
